--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,9 @@ logging:
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 spring:
-  jpa:
-    hibernate:
-      ddl-auto: validate
+  #jpa:
+    #hibernate:
+      #ddl-auto: validate
   datasource:
     username: ${DB_USER}
     password: ${DB_PASSWORD}
